# mt-correlation-tests

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  allexperiments.cpp  allexperiments.hpp  experiment.cpp  experiment.hpp  main.c  main.cpp  mt.def
libmt/: CMakeLists.txt  desired_final1_status.txt  final_status_with_horner.txt  final_status_with_sliding_window.txt  initial_status.txt  jump_ahead.c  jump_ahead.h  jump_mt19937.c  jump_mt19937.h  minipoly_mt19937.c  minipoly_mt19937.h  mt19937ar.c  mt19937ar.h  shared.h
libmt/libs/include/NTL/: ConfigLog.h
libmt/libs/lib/: libgmp.la
libmultivartest/: CMakeLists.txt  kendall2.c
libmultivartest/tntjama/: tnt.h  tnt_array1d_utils.h  tnt_array2d_utils.h
src/: allexperiments.hpp  experiment.cpp
tests/: CMakeLists.txt  mtStateTest.c  mtTest.c
